@@ -2,6 +2,8 @@ post-v1.9.0
 --------------------
     - New support for the VXLAN tunnel protocol (see the IETF draft here:
       http://tools.ietf.org/html/draft-mahalingam-dutt-dcops-vxlan-02).
+    - New "vlog/disable-rate-limit" and "vlog/enable-rate-limit" commands
+      available through ovs-appctl allow control over logging rate limits.
 
 
 v1.9.0 - xx xxx xxxx
